--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "prop-types": "^15.8.1",
+    "ra-data-json-server": "^4.13.2",
     "ra-data-simple-rest": "^4.13.2",
     "react": "^18.0.0",
     "react-admin": "^4.13.2",
