--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-admin": "^4.13.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
   },
