--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "test": "vitetest",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,6 +12,8 @@
     "json": "json-server --w db.json -p 5000"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
@@ -24,6 +27,7 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -31,6 +35,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.3"
   }
 }
