--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json": "json-server --w db.json -p 5000"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
@@ -19,6 +20,7 @@
     "react-admin": "^4.13.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.46.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
