--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "json": "json-server --w db.json -p 5000"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
