--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "json": "json-server --w db.json -p 5000"
+    "json": "json-server --w db.json -p 5000",
+    "test": "vitest"
   },
   "dependencies": {
     "bootstrap": "^5.3.1",
+    "jsdom": "^22.1.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
     "ra-data-simple-rest": "^4.13.2",
@@ -19,11 +21,14 @@
     "react-admin": "^4.13.2",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -31,6 +36,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^0.34.3"
   }
 }
