--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "jsdom": "^22.1.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
     "ra-data-simple-rest": "^4.13.2",
