--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "jsdom": "^22.1.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
     "ra-data-simple-rest": "^4.13.2",
