--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "jsdom": "^22.1.0",
+    "mdb-react-ui-kit": "^6.3.0",
     "prop-types": "^15.8.1",
     "ra-data-json-server": "^4.13.2",
     "ra-data-simple-rest": "^4.13.2",
@@ -27,7 +28,8 @@
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -36,6 +38,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "vi-fetch": "^0.8.0",
     "vite": "^4.4.5",
     "vitest": "^0.34.3"
   }
