--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "json": "json-server --w db.json -p 5000",
-    "test": "vitest"
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "jsdom": "^22.1.0",
@@ -21,9 +25,11 @@
     "ra-data-simple-rest": "^4.13.2",
     "react": "^18.0.0",
     "react-admin": "^4.13.2",
+    "react-audio-player": "^0.17.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-google-recaptcha": "^3.1.0",
+    "react-h5-audio-player": "^3.9.0",
     "react-icons": "^4.10.1",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0"
